--- a/.github/workflows/build-nsis-test.yml
+++ b/.github/workflows/build-nsis-test.yml
@@ -2,6 +2,7 @@ name: Build NSIS Test (Settings Import)
 
 on:
   workflow_dispatch:
+    # Manual trigger for testing NSIS changes
 
 jobs:
   build:
