--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -105,6 +105,6 @@ jobs:
       - name: Upload installer
         uses: actions/upload-artifact@v4
         with:
-          name: wsjtx-swiss-installer
+          name: wsjtx-swiss-installer.zip
           path: wsjtx/build/wsjtx-*.exe
           retention-days: 30
