Fix NSIS escaping with backticks for MessageBox strings

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,5 +1,7 @@
 name: Build WSJT-X Windows Installer
 
+run-name: "Build WSJT-X Windows Installer (Advanced - backtick escaping)"
+
 on:
   push:
     tags:
