Simplify: MessageBox with fixed path, no folder dialog

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,6 +1,6 @@
 name: Build WSJT-X Windows Installer
 
-run-name: "Build WSJT-X Windows Installer (Advanced - backtick escaping)"
+run-name: "Build WSJT-X Windows Installer (Advanced - simple MessageBox)"
 
 on:
   push:
